# RobotFramework

./: .gitignore  README.md  pyproject.toml  requirements.txt  version.txt
Resources/: CommonFunctionality.resource  eBayKeywords.resource
Resources/Api/: reqres_api.py
Resources/Dto/: error_model_reqres.py  generic_reqres.py  get_single_user_dto.py
Resources/Locators/: demoqa_locators.py  ebay_locators.py
Resources/PageObjects/: HeaderPage.resource  LandingPage.resource  RadioButtonsPage.resource  SearchResultsPage.resource
Resources/TestHelper/: BasicHelper.py
Resources/Utility/: SecretsGetter.resource  SendRequests.resource  custom_request.py  custom_response.py  logger.py  model.py  secret_reader.py
Resources/Variables/: ebay_constants.py
TestData/: login_data.csv  login_data.xlsx
Tests/: DDT_CSV.robot  DDT_XLSX.robot  DDTesting.robot  WorkWithRadioButtons.robot  WorkingWithBrowser.robot  WorkingWithWindows.robot
Tests/Google/FunctionalTestSuite/: GoogleSearch.robot
Tests/Reqres/: APIChecks.robot
Tests/eBay/FunctionalTestSuite/: BasicSearch.robot  SearchWithPOM.robot
